[tool.poetry]
name = "fusebox"
version = "0.1.0"
description = "FUSE-powered sandbox for Gentoo Linux"
authors = ["Kaoru Esashika <e_kaoru5@yahoo.co.jp>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
pyfuse3 = "^3.0.0"
trio = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
